welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:28: error: not found: type color
      if (isFacingTrail(c:color) == true) {
                          ^SlugSnail:54: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
    if (getCouleurSol == c:Color) {
                      ^SlugSnail:54: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    if (getCouleurSol == c:Color) {
                          ^